--- a/Drink.html
+++ b/Drink.html
@@ -407,7 +407,7 @@
             <img src="348s-removebg-preview.png" alt="The Smoke Haus Logo">
         </div>
         <nav class="nav-menu">
-            <a href="About.html" class="nav-link">ABOUT</a>
+            <a href="index.html" class="nav-link">ABOUT</a>
             <a href="menu.html" class="nav-link">MENU</a>
             <a href="Drink.html" class="nav-link">DRINKS</a>
             <a href="offer.html" class="nav-link">OFFERS</a>
@@ -643,7 +643,7 @@
                 <img src="348s-removebg-preview.png" class="footer-logo" alt="The Smoke Haus Logo">
                 <p class="slogan">#We salute you</p>
                 <div class="footer-nav">
-                    <a href="About.html">ABOUT</a>
+                    <a href="index.html">ABOUT</a>
                     <a href="menu.html">MENU</a>
                     <a href="Drink.html">DRINKS</a>
                     <a href="offer.html">OFFERS</a>
